Stylesheet/emote/tag updates 2015-04-08

--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -186,7 +186,7 @@ a#search_showmore { color: #fff; }
 
 .side .md th { display: none; }
 
-.side .md tr,td {
+.side .md tr, .side .md td {
     border: 1px solid #bbf189 !important;
     padding: 0px !important;
 }
@@ -549,4 +549,5 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 .flair-adagiodazzle { background-position: 0 -2200%; }
 .flair-ariablaze { background-position: -100% -2200%; }
 .flair-sonatadusk { background-position: -200% -2200%; }
+.flair-starlightglimmer { background-position: -300% -2200%; }
 .flair-strudel { background-position: 0 -2300%; width: 32px; }
