--- a/source-css/bloomjackquisition.css
+++ b/source-css/bloomjackquisition.css
@@ -418,6 +418,7 @@ a[href|="/fillystew"]{
     background-image: url(%%fillystew%%) !important;
 }
 
+/* REMOVED
 a[href|="/afillyandherdog"]{
     display:block;
     clear:none;
@@ -426,6 +427,7 @@ a[href|="/afillyandherdog"]{
     height:153px;
     background-image: url(%%abwinona%%) !important;
 }
+*/
 
 a[href|="/applebuck"]{
     display:block;
@@ -434,6 +436,170 @@ a[href|="/applebuck"]{
     width:177px;
     height:200px;
     background-image: url(%%applebuck%%) !important;
+}
+
+a[href|="/abhoopjump"],
+a[href|="/abbowling2"],
+a[href|="/napplebloom"],
+a[href|="/gloomybloom"],
+a[href|="/afillyandherdog"],
+a[href|="/bloombuck"],
+a[href|="/abflat"],
+a[href|="/abwinona"],
+a[href|="/abworkout"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:200px;
+    height:150px;
+    background-image: url(%%sheet5%%) !important;
+}
+a[href|="/abhoopjump"]{
+    background-position:-0% -0%
+}
+a[href|="/abbowling2"]{
+    width:174px;
+    background-position:-200px -0%
+}
+a[href|="/napplebloom"]{
+    height:98px;
+    background-position:-400px -0%
+}
+a[href|="/gloomybloom"]{
+    background-position:-0% -100%
+}
+a[href|="/afillyandherdog"]{
+    background-position:-100% -100%
+}
+a[href|="/bloombuck"]{
+    height:116px;
+    background-position:-200% -150px
+}
+a[href|="/abflat"]{
+    height:118px;
+    background-position:-0% -300px
+}
+a[href|="/abwinona"]{
+    height:93px;
+    background-position:-100% -300px
+}
+a[href|="/abworkout"]{
+    background-position:-200% -200%
+}
+
+a[href="/uncouth"],
+a[href="/thislovelynewchapeau"],
+a[href="/abyoga"],
+a[href="/abhyper"],
+a[href="/sevenleggedrace"],
+a[href="/abcake"],
+a[href="/abhoofbump"],
+a[href="/abplayful"],
+a[href="/abhaythere"],
+a[href="/aboverattached"],
+a[href="/abcovet"],
+a[href="/itscalledanapple"],
+a[href="/abbedmane"],
+a[href="/sweetiebloomhug"],
+a[href="/bloomjackride"],
+a[href="/abgetout"],
+a[href="/fashionabloom"],
+a[href="/abcaffeine"],
+a[href="/abderelle"],
+a[href="/summerbitches"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:200px;
+    height:200px;
+    background-image: url(%%sheet3-2%%) !important;
+}
+a[href="/uncouth"]{
+    width:147px;
+    height:150px;
+    background-position:0% 0%;
+}
+a[href="/thislovelynewchapeau"]{
+    height:189px;
+    background-position:-200px 0%;
+}
+a[href="/abyoga"]{
+    height:169px;
+    background-position:0% -200px;
+}
+a[href="/abhyper"]{
+    width:170px;
+    background-position:-400px 0%;
+}
+a[href="/sevenleggedrace"]{
+    width:186px;
+    background-position:-200px -200px;
+}
+a[href="/abcake"]{
+    height:192px;
+    background-position:-400px -200px;
+}
+a[href="/abhoofbump"]{
+    width:168px;
+    background-position:-600px 0%;
+}
+a[href="/abplayful"]{
+    height:194px;
+    background-position:-600px -200px;
+}
+a[href="/abhaythere"]{
+    width:161px;
+    background-position:0% -400px;
+}
+a[href="/aboverattached"]{
+    width:145px;
+    height:150px;
+    background-position:-200px -400px;
+}
+a[href="/abcovet"]{
+    width:80px;
+    height:100px;
+    background-position:-400px -400px;
+}
+a[href="/itscalledanapple"]{
+    width:108px;
+    background-position:-600px -400px;
+}
+a[href="/abbedmane"]{
+    height:169px;
+    background-position:0% -600px;
+}
+a[href="/sweetiebloomhug"]{
+    height:147px;
+    background-position:-200px -600px;
+}
+a[href="/bloomjackride"]{
+    width:151px;
+    background-position:-400px -600px;
+}
+a[href="/abgetout"]{
+    width:139px;
+    height:150px;
+    background-position:-600px -600px;
+}
+a[href="/fashionabloom"]{
+    width:161px;
+    background-position:-800px 0%;
+}
+a[href="/abcaffeine"]{
+    width:100px;
+    height:100px;
+    background-position:-800px -200px;
+}
+a[href="/abderelle"]{
+    width:69px;
+    height:150px;
+    background-position:-800px -400px;
+}
+a[href="/summerbitches"]{
+    width:149px;
+    height:175px;
+    background-position:-800px -600px;
 }
 
 /* Blame /u/kekerino for these */
