--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -440,3 +440,4 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 .flair-adagiodazzle {background-position:0% -2200%}
 .flair-ariablaze {background-position:-100% -2200%}
 .flair-sonatadusk {background-position:-200% -2200%}
+.flair-starlightglimmer { background-position: -300% -2200%; }
