--- a/source-css/mlpoc.css
+++ b/source-css/mlpoc.css
@@ -1,3 +1,43 @@
+/*APRIL FOOOOLS! CREDIT TO /R/NINTENDO*/
+//.comment[data-fullname$="0"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: This OC and Game are best ship."; }
+//.comment[data-fullname$="1"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: I thought about calling this one Chaos Gun."; }
+//.comment[data-fullname$="2"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: This OC was my idea."; }
+//.comment[data-fullname$="3"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: nothing personnel...kid"; }
+//.comment[data-fullname$="4"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Pretty sure Season 5 is cancelled."; }
+//.comment[data-fullname$="5"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Should I give it a fifth leg?"; }
+//.comment[data-fullname$="6"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Your OC a shit. It ain't catburd."; }
+//.comment[data-fullname$="7"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Why doesn't it have a rainbow mane yet?"; }
+//.comment[data-fullname$="8"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Dethrone the mods!"; }
+//.comment[data-fullname$="9"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Give us a Fire Emblem crossover pone!"; }
+//.comment[data-fullname$="a"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Griffons."; }
+//.comment[data-fullname$="b"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Donut steel!"; }
+//.comment[data-fullname$="c"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: The mods said to say April Fools came late. Prease andastand."; }
+//.comment[data-fullname$="d"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: This subreddit is closing today. Please understand."; }
+//.comment[data-fullname$="e"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Let's make Littlest Pet Shop OCs instead!"; }
+//.comment[data-fullname$="f"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: We stole the words that Tingle created!"; }
+//.comment[data-fullname$="g"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: [](/sbstare-i)"; }
+//.comment[data-fullname$="h"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Gilda-senpai is mai waifu."; }
+//.comment[data-fullname$="i"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: pls"; }
+//.comment[data-fullname$="j"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Don't use as many colours on that cutie mark."; }
+//.comment[data-fullname$="k"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: /r/nintendo deserves a sub."; }
+//.comment[data-fullname$="l"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Game Changer used Ship. It's super effective!"; }
+//.comment[data-fullname$="m"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: anon2lol pls."; }
+//.comment[data-fullname$="n"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Come and RP with us!"; }
+//.comment[data-fullname$="o"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: When the hell's my OC gonna get featured in Dash Academy?"; }
+//.comment[data-fullname$="p"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Lovely horse ladies!"; }
+//.comment[data-fullname$="q"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: April Fools?"; }
+//.comment[data-fullname$="r"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Do not abandon ship."; }
+//.comment[data-fullname$="s"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: GameNote OTP!"; }
+//.comment[data-fullname$="t"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: CollarKarai OTP!"; }
+//.comment[data-fullname$="u"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Schala OTP!"; }
+//.comment[data-fullname$="v"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Scholarusty OTP!"; }
+//.comment[data-fullname$="w"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Ech."; }
+//.comment[data-fullname$="x"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: Don't remove your collar!"; }
+//.comment[data-fullname$="y"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: These are the magic words that /r/nintendo created itself, but we borrowed them!"; }
+//.comment[data-fullname$="z"]>.entry>.usertext>.usertext-body>.md>p:last-child::after { content: " PS: gibe de shippy n0zz"; }
+
+
+
 /*CHANGE PAGE NAME*/
 .pagename a {
     font-size: 0;
