--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -28,7 +28,7 @@ div.titlebox span.word {
 /* Header */
 #header {
 height: 0x; 
-    background: url(%%aspecialflake%%) no-repeat #FFFFFF;
+    background: url(%%revalatons%%) no-repeat #FFFFFF;
     margin-bottom: 52px;
     background-position: 83% 20px;
     border-bottom: 0px solid #314D5B;
@@ -58,7 +58,7 @@ height: 0x;
 }
 
 #header .pagename.redditname a {
-    background: url(%%winterheader%%) 0px 0px no-repeat;
+    background: url(%%April1banner%%) 0px 0px no-repeat;
     width: 1100px;
     height: 237px;
     display: inline-block;
@@ -1029,5 +1029,3 @@ translateY(10px) rotate(0deg);
 .res-nightmode .usertext.border .usertext-body { 
 
 background-color: rgb(255, 170, 255) !important; }
-
-
