--- a/source-css/scootalounge.css
+++ b/source-css/scootalounge.css
@@ -100,7 +100,6 @@ a[href="/scootasad3"],
 a[href="/scootasad4"],
 a[href="/wiygn"],
 a[href="/chicken"],
-a[href="/plasmahawk"],
 a[href="/scootacrush"],
 a[href="/scootanap"],
 a[href="/scootasnooze"],
@@ -128,7 +127,7 @@ a[href="/scootasad2"]{background-position:-200% 0%;}
 a[href="/scootasad3"]{background-position:-300% 0%;}
 a[href="/scootasad4"]{background-position:-400% 0%;}
 a[href="/wiygn"]{background-position:0% -100%;}
-a[href="/chicken"],a[href="/plasmahawk"]{background-position:-100% -100%;}
+a[href="/chicken"]{background-position:-100% -100%;}
 a[href="/scootacrush"]{background-position:-200% -100%;}
 a[href="/scootanap"]{background-position:-300% -100%;}
 a[href="/scootasnooze"]{background-position:-400% -100%;}
