--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -129,7 +129,8 @@ a.author[href$="di_zz"],
 a.author[href$="arborcide"],
 a.author[href$="motbob"],
 a.author[href$="Rosindust89"],
-a.author[href$="batsomething"]
+a.author[href$="batsomething"],
+a.author[href$="QuillOmega0"]
 { 
 font-size:0!important; 
 overflow:hidden; 
@@ -150,7 +151,8 @@ a.author[href$="di_zz"]:before,
 a.author[href$="arborcide"]:before,
 a.author[href$="motbob"]:before,
 a.author[href$="Rosindust89"]:before,
-a.author[href$="batsomething"]:before
+a.author[href$="batsomething"]:before,
+a.author[href$="QuillOmega0"]:before
 {
 font-size:10px!important; 
 visibility:visible!important;
@@ -170,6 +172,7 @@ a.author[href$="arborcide"]:before { content:"Sly_Clopper" }
 a.author[href$="motbob"]:before { content:"Littlecolt" }
 a.author[href$="Rosindust89"]:before { content:"FlutterPie" }
 a.author[href$="batsomething"]:before { content:"mc_square" }
+a.author[href$="QuillOmega0"]:before { content:"Q0" }
 
 /*Spoiler tag within comments. Your comment should be: "[This is a spoiler sentence.](/spoiler)" */  
 a[href$="/spoiler"] {  
