--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -2,7 +2,7 @@
 
 /* Changes background  */
  body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%jeebuz%%)  no-repeat fixed 66% 100% !important;
+    background:  url(%%John-Cena%%)  no-repeat fixed 66% 100% !important;
 }go
 
 
@@ -19,7 +19,7 @@
 /* Banner image and associated height values */
 
  #header #header-bottom-left {
-   background: url(%%RADICAL%%) 50% 0px !important;
+   background: url(%%cena%%) 50% 0px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
@@ -570,6 +570,7 @@ background-repeat: no-repeat;
 .flair-kwulhu:after { background-position: 0px -6870px }
 .flair-chino:after { background-position: 0px -6900px }
 .flair-xelnaga:after { background-position: 0px -6930px }
+.flair-Alvin086:after { background-position: 0px -6960px }
 
 /* Nightmode fix for flair */
 body.res-nightmode:first-of-type .flair { background-color: #222!important; }
@@ -1505,6 +1506,22 @@ a[href|='/loligagging'],a[href|='/ponyjpeg']{
 
 a[href|="/loligagging"] {width:584px; height:163px; background-position: -0px -351px}
 a[href|="/ponyjpeg"]{width:400px; height:346px; background-position: -0px -0px}
+
+/* April Fools 2015 Emotes */
+a[href|='/gbeck'], a[href|='/billyo'], a[href|='/hannity'], a[href|='/limbaugh'], a[href|='/palin'], a[href|='/romney'], a[href|='/drudgeconfused']{
+
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%ss2%%) }
+
+a[href|="/gbeck"] {width:100px; height:138px; background-position: -2px -146px}
+a[href|="/billyo"] {width:100px; height:107px; background-position: -2px -810px}
+a[href|="/hannity"] {width:100px; height:135px; background-position: -2px -286px}
+a[href|="/limbaugh"] {width:100px; height:142px; background-position: -2px -2px}
+a[href|="/palin"] {width:100px; height:129px; background-position: -2px -423px}
+a[href|="/romney"] {width:100px; height:128px; background-position: -2px -554px}
+a[href|="/drudgeconfused"] {width:100px; height:124px; background-position: -2px -684px}
 
 /********** End of Emotes ************/
 
